Fix centering of Welcome image on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -185,6 +185,12 @@ graphic-diptych picture {
     max-width: 400px;
 }
 
+@media (max-width: 700px) {
+  graphic-diptych picture {
+    align-self: center;
+  }
+}
+
 graphic-diptych text-content {
   display: block;
 }
@@ -228,7 +234,7 @@ h2.loud {
 
 @media screen and (max-width: 800px) {
   .product {
-    flex-direction: column; /* Arranges items in a column on smaller screens */
+    flex-direction: column;
     align-items: center;
   }
 }
